init TABLE && PHILOS && assign forks

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -1,22 +1,36 @@
 SRC_DIR = /src
 UTILS_DIR = $(SRC_DIR)/utils
 CHECKS_DIR = $(SRC_DIR)/checks
+DEBUG_DIR = $(SRC_DIR)/debug
+INIT_DIR = $(SRC_DIR)/init
 
 SRC_UTILS = $(UTILS_DIR)/ft_atoi_ul.c \
 			$(UTILS_DIR)/ft_putstr.c \
-			$(UTILS_DIR)/ft_strlen.c
+			$(UTILS_DIR)/ft_strlen.c \
+			$(UTILS_DIR)/tab.c
 
-CHECKS_SRC = $(CHECKS_DIR)/checks.c \
+SRC_CHECKS = $(CHECKS_DIR)/checks.c \
 			$(CHECKS_DIR)/is_number.c
+
+SRC_INIT = $(INIT_DIR)/table.c \
+			$(INIT_DIR)/philo.c 
+
+SRC_DEBUG = $(DEBUG_DIR)/colors.c \
+			$(DEBUG_DIR)/table.c \
+			$(DEBUG_DIR)/philo.c 
 
 SRC = $(SRC_DIR)/main.c \
 		$(SRC_UTILS) \
-		$(CHECKS_SRC)
+		$(SRC_CHECKS) \
+		$(SRC_DEBUG) \
+		$(SRC_INIT) \
 
 ALLDIR = $(OBJ_DIR) \
 		$(OBJ_DIR)$(SRC_DIR) \
 		$(OBJ_DIR)$(UTILS_DIR) \
 		$(OBJ_DIR)$(CHECKS_DIR) \
+		$(OBJ_DIR)$(DEBUG_DIR) \
+		$(OBJ_DIR)$(INIT_DIR) \
 
 OBJ_DIR = ./obj
 OBJ = $(SRC:%.c=$(OBJ_DIR)%.o)
