PROJECT WORK :  without monitor for look if each philo eats

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -39,7 +39,7 @@ ALLDIR = $(OBJ_DIR) \
 OBJ_DIR = ./obj
 OBJ = $(SRC:%.c=$(OBJ_DIR)%.o)
 CC = cc
-CFLAGS += -Wall -Wextra -Werror -g -Isrc
+CFLAGS += -Wall -Wextra -Werror -g -Isrc -fsanitize=thread
 NAME = philo
 
 all : $(NAME)
